--- a/wordpress/docker-compose.yml
+++ b/wordpress/docker-compose.yml
@@ -1,5 +1,6 @@
-version: '3.3'
+version: '3.7'
 
+# two services running, db and wordpress
 services:
   db:
     image: mysql:5.7
@@ -7,10 +8,10 @@ services:
       - db_data:/var/lib/mysql
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: password
-      MYSQL_DATABASE: wordpress
-      MYSQL_USER: wordpress
-      MYSQL_PASSWORD: wordpress
+      MYSQL_ROOT_PASSWORD: your_mysql_root_password
+      MYSQL_DATABASE: your_mysql_database_name
+      MYSQL_USER: your_mysql_username
+      MYSQL_PASSWORD: your_mysql_password
 
   wordpress:
     depends_on:
@@ -21,9 +22,9 @@ services:
     restart: always
     environment:
       WORDPRESS_DB_HOST: db:3306
-      WORDPRESS_DB_USER: wordpress
-      WORDPRESS_DB_PASSWORD: wordpress
-      WORDPRESS_DB_NAME: wordpress
+      WORDPRESS_DB_USER: your_mysql_username
+      WORDPRESS_DB_PASSWORD: your_mysql_password
+      WORDPRESS_DB_NAME: your_mysql_database_name
 volumes:
   db_data:
 
